--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         make -j$(nproc)
         sudo make install
         cd ../..
-        git clone https://shtras.com/Potions
+        git clone https://github.com/shtras/Potions
         cd Potions
         mkdir build
         cd build
