--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,12 +31,10 @@ jobs:
         if [[ ! -e /home/runner/work/mongo-c-driver ]] ; then
           git clone https://github.com/mongodb/mongo-c-driver.git
           mkdir -p /home/runner/work/mongo-c-driver/cmake_build
-          cd /home/runner/work/mongo-c-driver/cmake_build
-          cmake -DENABLE_AUTOMATIC_INIT_AND_CLEANUP=OFF ..
-          make
         fi
-
         cd /home/runner/work/mongo-c-driver/cmake_build
+        cmake -DENABLE_AUTOMATIC_INIT_AND_CLEANUP=OFF ..
+        make
         sudo make install -j$(nproc)
 
     - name: Build mongo cxx
@@ -45,17 +43,16 @@ jobs:
         if [[ ! -e /home/runner/work/mongo-cxx-driver ]] ; then
           git clone https://github.com/mongodb/mongo-cxx-driver.git
           mkdir -p /home/runner/work/mongo-cxx-driver/cmake_build
-          cd /home/runner/work/mongo-cxx-driver/cmake_build
-          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local ..
-          sudo make EP_mnmlstc_core
-          make -j$(nproc)
         fi
         cd /home/runner/work/mongo-cxx-driver/cmake_build
+        cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local ..
+        sudo make EP_mnmlstc_core
+        make -j$(nproc)
         sudo make install
-
+    - name: Apt install
+      run: sudo apt-get -y install libboost-system-dev libssl-dev
     - name: Build potions
       run: |
-        sudo apt-get -y install libboost-system-dev libssl-dev
         cd /home/runner/work/
         git clone https://github.com/shtras/Potions
         cd Potions
