more cache plays

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,40 +15,36 @@ jobs:
         cd /home/runner/work/
     - name: Pwd persistency check
       run: pwd
-    - name: Cache cxx drivers
+    
+    - name: Cache usr local
       uses: actions/cache@v1
       with:
-        path: /home/runner/work/mongo-cxx-driver
-        key: mongo-cxx-driver
-    - name: Cache c drivers
-      uses: actions/cache@v1
-      with:
-        path: /home/runner/work/mongo-c-driver
-        key: mongo-c-driver
+        path: /usr/local
+        key: usr-local
     - name: Build mongo c
       run: |
         cd /home/runner/work/
         if [[ ! -e /home/runner/work/mongo-c-driver ]] ; then
           git clone https://github.com/mongodb/mongo-c-driver.git
           mkdir -p /home/runner/work/mongo-c-driver/cmake_build
+          cd /home/runner/work/mongo-c-driver/cmake_build
+          cmake -DENABLE_AUTOMATIC_INIT_AND_CLEANUP=OFF ..
         fi
         cd /home/runner/work/mongo-c-driver/cmake_build
-        cmake -DENABLE_AUTOMATIC_INIT_AND_CLEANUP=OFF ..
         make
         sudo make install -j$(nproc)
-
     - name: Build mongo cxx
       run: |
         cd /home/runner/work/
         if [[ ! -e /home/runner/work/mongo-cxx-driver ]] ; then
           git clone https://github.com/mongodb/mongo-cxx-driver.git
           mkdir -p /home/runner/work/mongo-cxx-driver/cmake_build
+          cd /home/runner/work/mongo-cxx-driver/cmake_build
+          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local ..
+          sudo make EP_mnmlstc_core
+          make -j$(nproc)
         fi
         cd /home/runner/work/mongo-cxx-driver/cmake_build
-        cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local ..
-        sudo make EP_mnmlstc_core
-        make -j$(nproc)
-        sudo make uninstall
         sudo make install
     - name: Apt install
       run: sudo apt-get -y install libboost-system-dev libssl-dev
